fix: Correção da login e estrutura do endpoint de login para seguir o clean arch
